{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 203,
  "lineage": "61a98eb4-ddf4-472c-5638-3392190fec0e",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:security-group/sg-0a79745d21edbf745",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a79745d21edbf745",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nabeel-security-group",
            "name_prefix": "",
            "owner_id": "944088793080",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c30e889856e45a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:internet-gateway/igw-08a6c5026ada90500",
            "id": "igw-08a6c5026ada90500",
            "owner_id": "944088793080",
            "tags": {
              "Name": "portaliprod-IG"
            },
            "tags_all": {
              "Name": "portaliprod-IG"
            },
            "vpc_id": "vpc-00c30e889856e45a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a6c5026ada90500",
            "id": "r-rtb-0c17c480175f180e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c17c480175f180e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:route-table/rtb-0c17c480175f180e9",
            "id": "rtb-0c17c480175f180e9",
            "owner_id": "944088793080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a6c5026ada90500",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-portaliprod-public"
            },
            "tags_all": {
              "Name": "rtb-portaliprod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c30e889856e45a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb27cb78f30b9547",
            "route_table_id": "rtb-0c17c480175f180e9",
            "subnet_id": "subnet-0744983cc9a28511d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068e3ee119921e7fa",
            "route_table_id": "rtb-0c17c480175f180e9",
            "subnet_id": "subnet-07ed57b4e3af8166f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b03d05c7f0b457d8",
            "route_table_id": "rtb-0c17c480175f180e9",
            "subnet_id": "subnet-0ec479c8587657292"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_subnet.public_3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:subnet/subnet-0744983cc9a28511d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0744983cc9a28511d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944088793080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portaliprod-public_sub-1"
            },
            "tags_all": {
              "Name": "portaliprod-public_sub-1"
            },
            "vpc_id": "vpc-00c30e889856e45a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:subnet/subnet-07ed57b4e3af8166f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed57b4e3af8166f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944088793080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portaliprod-public_sub-2"
            },
            "tags_all": {
              "Name": "portaliprod-public_sub-2"
            },
            "vpc_id": "vpc-00c30e889856e45a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:subnet/subnet-0ec479c8587657292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.20.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec479c8587657292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944088793080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portaliprod-public_sub-3"
            },
            "tags_all": {
              "Name": "portaliprod-public_sub-3"
            },
            "vpc_id": "vpc-00c30e889856e45a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944088793080:vpc/vpc-00c30e889856e45a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-07899974b1de0742a",
            "default_route_table_id": "rtb-0f37e339d332815f5",
            "default_security_group_id": "sg-04c3163d55490c352",
            "dhcp_options_id": "dopt-0ae50eb47828b3230",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c30e889856e45a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f37e339d332815f5",
            "owner_id": "944088793080",
            "tags": {
              "Name": "portaliprod-VPC"
            },
            "tags_all": {
              "Name": "portaliprod-VPC"
            }
          }
        }
      ]
    }
  ]
}